--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,35 +1,27 @@
 
 <%- include("includes/header" )%>
 <title>Cart</title>
-<link rel="stylesheet" href='styles/cart.css'>
+<link rel="stylesheet" href='/styles/cart.css'>
 </head>
 <body>
     <%- include('includes/navigation') %>
-    <div class="container-fluid cart table-responsive">
-    		<h5>Cart</h5>
-        <table class="table table-bordered table-hover">
-          <thread>
-            <tr>
-              <th scope="col">Serial no.</th>
-              <th scope="col">Image</th>
-              <th scope="col">Product Name</th>
-              <th scope="col">Price</th>
-              <th scope="col">Quantity</th>
-              <th scope="col">Delete Item</th>
-              <th scope="col">Item Totlal Price</th>
-            </tr>
-          </thread>
-          <tbody>
-          <% for(let i=0;i<products.length ;i++){%>
-            <tr>
-              <th scope="row"><%=i+1%></th>
-              <td><img src="<%= products[i].productId.img%>"></td>
-              <td>
-                  <a class="title" href="/item/<%= products[i].productId._id %>" ><%= products[i].productId.title%></a>
-              </td>
-              <td><p>Price:$<%= products[i].productId.price%></p></td>
-              <td>
-                <form method="POST",action="/cart">
+    
+    <div class="container-fluid cart">
+      <h4 class="text-center">Cart Details</h4>
+      
+      <% if(products.length==0){ %>
+        <h3 class="text-center">Cart is Empty</h3>
+      <% } %>
+      <% for(let i=0;i<products.length ;i++){%>
+        <div class="row">
+          <div class="col-4 col-lg-6">
+            <img src="<%= products[i].productId.img%>">
+          </div>
+          <div class="col-8 col-lg-6 ">
+            <label>Product Name:</label>
+            <a class="title" href="/item/<%= products[i].productId._id %>"><%= products[i].productId.title%></a>
+            <h5>Price:$<%= products[i].productId.price%></h5>
+            <form method="POST",action="/cart">
               <input name="productId" value="<%=products[i].productId._id%>" type="hidden" >
               <label>Quantity:</label>
               <select name="quantity" onchange="this.form.submit()">
@@ -40,28 +32,28 @@
                 <option <%=products[i].quantity==5?"selected":''%> value="5">5</option>
               </select>
             </form>
-              </td>
-              <td>
-                  <form method="POST", action="/cart-delete-item">
-                  <input type="hidden" name="productId" value="<%=products[i].productId._id%>">
-                  <button class="btn btn-danger">Delete Item</button>
-                </form>
-              </td>
-              <td>
-              <h6>Item Total Price:$<%= products[i].quantity*products[i].productId.price%></h6>
-              </td>
-            </tr>
-          <% }%>
-          </tbody>
-          </table>
-          <% let c=0;
-          for(let i=0;i<products.length;i++)
-          {
-            c+=products[i].quantity*products[i].productId.price
-          } 
-          %>
-          <h4 class="total">Cart Total:$<%= c %></h4>
+            <h4>Item Total Price:$<%= products[i].quantity*products[i].productId.price%></h4>
+            <form method="POST", action="/cart-delete-item">
+              <input type="hidden" name="productId" value="<%=products[i].productId._id%>">
+              <button class="btn btn-danger">Delete Item</button>
+            </form>
+          </div>
         </div>
-
+        <hr>
+      <% }%>
+      
+      <% let c=0;
+      for(let i=0;i<products.length;i++)
+      {
+        c+=products[i].quantity*products[i].productId.price
+      } 
+      %>
+      <h4 class="total">Cart Total:$<%= c %></h4>
+      <form method="POST" action="/order">
+        <div class="text-center">
+          <button class="btn btn-outline-dark btn-lg">Order Now</button>
+        </div>
+      </form>
+    </div>
 
 <%- include("includes/footer" )%>
