--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,6 @@
 <%- include("includes/header" )%>
 <title>Products</title>
-<link rel="stylesheet" href='styles/add-product.css'>
+<link rel="stylesheet" href='/styles/add-product.css'>
 </head>
 <body>
     <%- include('includes/navigation') %>
@@ -20,6 +20,7 @@
         <label>Password</label>
         <input type="Password" name="password" class="form-control" placeholder="Enter password">
         <button type="submit" class="btn btn-primary submit">Submit</button>
+        <a href='/signup' class="text-decoration-none align-bottom">Click here to Sign in</a>
     </form>
     </div>
 
