--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -10,4 +10,12 @@ body{
 }
 .nav-item{
     padding-top: 5px;
+    font-size:20px;
+    font-weight:500;
+}
+a.navbar-brand{
+    font-size: 24px;
+}
+.bg{
+    background-color: #40a3f5;
 }
