--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -1,6 +1,6 @@
 <%- include("includes/header" )%>
 <title>Products</title>
-<link rel="stylesheet" href='styles/add-product.css'>
+<link rel="stylesheet" href='/styles/add-product.css'>
 </head>
 <body>
     <%- include('includes/navigation') %>
@@ -8,6 +8,9 @@
     <form method="POST" action="/add-product" class="ff">
         <label>Product Name</label>
         <input type="text" name="title" class="form-control" placeholder="Enter name">
+        
+        <label>Product Category</label>
+        <input type="text" name="category" class="form-control" placeholder="Enter Product Category">
 
         <label>Product Price</label>
         <input type="number" step="0.01" min="0" name="price" class="form-control" placeholder="Enter price">
