--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,10 @@
 <%- include("includes/header" )%>
 <title>Home</title>
-<link rel="stylesheet" href='styles/home.css'>
+<link rel="stylesheet" href='/styles/home.css'>
 </head>
 <body>
     <%- include('includes/navigation') %>
-<h2 class="welcome">welcome to home</h2>
+<h2 class="welcome"></h2>
 <div id="carouselExampleCaptions" class="carousel slide carousel-fade"  data-bs-ride="carousel">
   <ol class="carousel-indicators">
     <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
@@ -46,73 +46,17 @@
 
 <div class="container-fluid">
 <div class="row">
-  <div class="card col-3" style="width: 18rem;">
-  <a class="cardclick "href='#'>
-    <img src="https://bit.ly/3mLcdHd" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  <% for(let i=0;i<category.length; i++) {%>
+    <div class="card col-3" style="width: 18rem;">
+    <a class="cardclick" href="/products/<%=category[i]%>">
+      <img src="<%= image[i] %>" class="card-img-top" alt="">
+      <div class="card-body">
+        <h5 class="card-title"><%= category[i] %></h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </a>
     </div>
-  </a>
-  </div>
-
-<div class="card col-3" style="width: 18rem;">
-  <a class="cardclick "href='#'>
-    <img src="https://bit.ly/3mLcdHd" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-  </a>
-  </div><div class="card col-3" style="width: 18rem;">
-  <a class="cardclick "href='#'>
-    <img src="https://bit.ly/2KmFdIp" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-  </a>
-  </div><div class="card col-3" style="width: 18rem;">
-  <a class="cardclick "href='#'>
-    <img src="https://bit.ly/2KmFdIp" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-  </a>
-  </div><div class="card col-3" style="width: 18rem;">
-  <a class="cardclick "href='#'>
-    <img src="https://bit.ly/3mLcdHd" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-  </a>
-  </div><div class="card col-3" style="width: 18rem;">
-  <a class="cardclick "href='#'>
-    <img src="https://bit.ly/3mLcdHd" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-  </a>
-  </div><div class="card col-3" style="width: 18rem;">
-  <a class="cardclick "href='#'>
-    <img src="https://bit.ly/3mLcdHd" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-  </a>
-  </div><div class="card col-3" style="width: 18rem;">
-  <a class="cardclick "href='#'>
-    <img src="https://bit.ly/3mLcdHd" class="card-img-top" alt="">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-  </a>
-  </div>
+    <% } %>
 
 </div>
 </div>
