--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,8 +1,12 @@
 </div>
 
+<div class="container-fluid bg-dark">
+    <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis est, aliquid quo numquam odio aliquam cum earum, dignissimos, eum ipsum molestiae libero nobis sequi. Animi quis veritatis ducimus deserunt magnam.</p>
+    <p class="text-center text-white">Copytight &copy 2021</p>
+    
 
-<p>this is my footer</p>
-
+</div>
+<script src="/js/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
