--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,5 +1,5 @@
 <div class="header">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,13 +14,16 @@
           <a class="nav-link <%= path==='/add-product'?'active':'' %>" aria-current="page" href="/add-product">Add Product</a>
         </li>
       </ul>
-      <form class="d-flex" style="margin-bottom:0px">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+      <form method='GET' action="/search" class="d-flex" style="margin-bottom:0px">
+        <input class="form-control me-2" name="text" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-dark " type="submit">Search</button>
       </form>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link <%= path==='/cart'?'active':'' %>" aria-current="page" href="/cart">Cart</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= path==='/myorders'?'active':'' %>" aria-current="page" href="/myorders">My Orders</a>
         </li>
           <li class="nav-item">
             <% if(!isauthenticated) {%>
