--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,14 +1,15 @@
 <%- include("includes/header" )%>
 <title>Products</title>
-<link rel="stylesheet" href='styles/add-product.css'>
+<link rel="stylesheet" href='/styles/add-product.css'>
 </head>
 <body>
     <%- include('includes/navigation') %>
     <div class="container-fluid f">
     <% if(errmsg){%>
-    <div class="alert alert-danger" role="alert">
-        <%=errmsg%>
-    </div><%}%>
+        <div class="alert alert-danger" role="alert">
+            <%=errmsg%>
+        </div>
+    <%}%>
     <form method="POST" action="/signin" class="ff">
 
         <label>Email</label>
@@ -17,7 +18,7 @@
         <label>Password</label>
         <input type="Password" name="password" class="form-control" placeholder="Enter password">
         <button type="submit" class="btn btn-primary submit">Submit</button>
-        <a href='/signup'>Click here to Sign up</a>
+        <a href='/signup' class="text-decoration-none align-bottom">Click here to Sign up</a>
     </form>
     </div>
 
